--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -691,7 +691,23 @@ nat server protocol tcp global current-interface www inside  192.168.200.20  www
 
 ```
 
+全局dhcp  接口需要配置为网关地址 与dhcp分配的在同一网段才能自动分配dhcp
+
+```
+dhcp enable
+ip pool huawei1
+network 192.168.3.0
+gateway-list 192.168.3.254
+excluded-ip-address 192.168.3.250 192.168.3.253
+interface GigabitEthernet 0/0/0
+```
+
+多个地址池，也是使用global 只不过是使用不同的接口的网段进行区分
+
+
+
 ### spt 生成树
+
 #### 环路
 环路影响：
 1. 广播风暴
