--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -114,7 +114,20 @@ LSA 泛洪
 
 router id 如果没配置 则选择loopback 最大的IP地址作为router id
 
+
+
+ospf ipv4  宣告进两个区域之后直连的两个网段就可以自动建立路由
+ipv6 需要 ospfv3 在不同的接口执行接口宣告
+
+
+
+
+
 ```
+
+interface NULL0 作用是啥？
+
+
 
 OSPF 双点双向的引入路由环路问题 
 添加过滤策略
