--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -127,6 +127,12 @@ ipv6 需要 ospfv3 在不同的接口执行接口宣告
 
 interface NULL0 作用是啥？
 
+**LL0 与路由汇总**
+
+一 般情况下，为了提高网络的可伸缩性，都得在边缘路由器上弄路由聚合。但是路由聚合需要满足一些的条件，比如，[OSPF](https://so.csdn.net/so/search?q=OSPF&spm=1001.2101.3001.7020) 中，只能在区域边界路由器对路由进行汇总，这样，为了进行路由聚合，我们就得进行划分多区域，但是这在某些情况下是不可满足的，再者，在BGP 中，为通知一个汇总网络，这个网络就得 存在在路由表，否则无法通知。
+
+但如果使用了 NULL0 接口和静态路由技术，这些问题会很巧妙的被解决。 
+
 
 
 OSPF 双点双向的引入路由环路问题 
