--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -610,6 +610,9 @@ ip add 192.168.10.254 24
 启用arp
 arp broadcast enbable
 
+vlan separate  独立vlan 每个vlan 中的端口不能互相访问
+
+
 ## 子网掩码
 
 就是用来分割子网和区分那些ip是同一个网段的，那些不是同一网段的
