--- a/架构设计/架构怎么做.md
+++ b/架构设计/架构怎么做.md
@@ -400,3 +400,14 @@ public abstract class AbstractSwagger2 {
 **（6）技术氛围怎么培养？**
 
 指导人机制，技术评审，技术分享
+
+## 6 如何做架构
+
+复杂度评估：
+
+- 功能复杂度
+- 非功能复杂度
+  - 高性能
+
+
+
