--- a/架构设计/分布式.md
+++ b/架构设计/分布式.md
@@ -134,4 +134,21 @@ BASE是Basically Available（基本可用）、Soft state（软状态）和Event
 
   - 缓存一致性模式
 
-  
+
+
+
+
+
+## 分布式数据分片方法：
+
+
+
+hash
+
+一致性哈希
+
+范围分片
+
+
+
+rpc 重传时间怎么设置？
