--- a/架构设计/架构怎么做.md
+++ b/架构设计/架构怎么做.md
@@ -401,13 +401,50 @@ public abstract class AbstractSwagger2 {
 
 指导人机制，技术评审，技术分享
 
+
+
+立足于业务价值去解决问题
+
+
+
 ## 6 如何做架构
 
 复杂度评估：
 
 - 功能复杂度
+
 - 非功能复杂度
   - 高性能
+  
+    ​	服务的可用性 SLA 
+
+| 两个9        | 3个9 99.9% | 4个 99.99%                   | 5个 99.999%  |
+| ------------ | ---------- | ---------------------------- | ------------ |
+| 系统基本可用 | 较高可用   | 具有自动恢复的能力的较高可用 | 极高的可用性 |
+|              |            |                              |              |
+|              |            |                              |              |
+
+##### 如何评估系统高可用？
+
+高可用性能评估  ：
+
+高可用 =   停机时间影响请求量 /总的请求量
 
 
+
+##### 如何监控系统高可用？
+
+创建一套监控系统，包括基础服务监控、系统应用监控报警、存储服务监控报警。
+
+###### 线上告警应急处理机制
+
+|      |      |      |      |
+| :--: | ---- | ---- | ---- |
+|      |      |      |      |
+|      |      |      |      |
+|      |      |      |      |
+
+
+
+##### 如何保证系统高可用？
 
