--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -748,7 +748,22 @@ interface GigabitEthernet 0/0/0
 环路影响：
 1. 广播风暴
 2. mac 地址漂移 
-3. 
+
+防环：
+
+1.把连接用户端口设置为边缘端口
+
+```
+stp edged-port enable 
+#开启保护 如果用户连接环路 直接关闭端口
+stp bpdu-protection 
+```
+
+
+
+
+
+
 
 ### 链路可靠性
 使用链路聚合
