--- a/架构设计/方案设计.md
+++ b/架构设计/方案设计.md
@@ -4,6 +4,12 @@
 
 
 
+系统或者常见的中间件性能指标：
+
+
+
+
+
 ## 2.大数据量场景设计
 
 
@@ -21,3 +27,50 @@
 1.发送消息时需要一个全局唯一的msgid，需要根据msgid 去重，保证消息发送的唯一性，启用ack等消息发送确认机制，保证消息正确投递。
 
 2.消费消息：消息中需要一个业务唯一的id保证去重。
+
+
+
+## 5.服务降级设计
+
+降级时站在系统整体可用性上考虑问题：当资源和访问量出现矛盾时，在有限的资源下放弃部分非核心功能或者服务，保证整体可用性，熔断也是降级的一种手段
+
+
+
+降级是：在请求流量突增的情况下，放弃一些非核心流程或者非关键业务，释放系统资源让核心业务正常运行
+
+读操作降级：
+
+做数据兜底服务，将兜底数据提前存入缓存中，当触发降级时读操作直接降级到缓存，从缓存中读取兜底数据，如果缓存中也不存在查询数据，则返回默认值，不在请求数据库
+
+写操作降级：
+
+将之前的直接同步写入数据的操作降级为先写缓存，然后再异步写入数据库
+
+把强一致性降级最终一致性
+
+功能降级：
+
+在做产品功能的取舍，降级之后对功能也要进行简化。
+
+降级功能的开关：一般时通过参数化的配置方式存储在配置中心，手动或者自动打开开关，实现系统降级。
+
+
+
+## 故障处理设计：
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
