--- a/架构设计/架构怎么做.md
+++ b/架构设计/架构怎么做.md
@@ -389,6 +389,16 @@ public abstract class AbstractSwagger2 {
 
 π型人才，除了技术宽度，还要有两条腿：一条是专业能力，还有一条是通用能力
 
+架构师能力模型：
+
+- 基础技术架构
+- 业务架构
+- 开发技能
+
+
+
+
+
 **（4）架构师三个阶段？**
 
 打基本功，业务沉淀，通用素质进阶
@@ -404,6 +414,10 @@ public abstract class AbstractSwagger2 {
 
 
 立足于业务价值去解决问题
+
+
+
+
 
 
 
