--- a/笔记/视频.md
+++ b/笔记/视频.md
@@ -34,3 +34,7 @@ time dd if=/dev/sdb of=/testrw.dbf bs=4k
 I帧 帧内编码帧 无需任何辅助就能完整显示画面
 B帧 双向帧 参考前后图像编码帧生成 需要前后I/P 帧或者后面的P帧来辅助完成一个画面
 P帧 前向预测编码帧 非完整帧需要参考 前面I帧 或者P 帧来生成画面
+
+#### 视频封装
+
+ftyp 作为视频的标识
