--- a/linux/磁盘相关笔记.md
+++ b/linux/磁盘相关笔记.md
@@ -212,3 +212,82 @@ tmpfs                371M     0  371M   0% /run/user/0
 ```
 
 https://blog.csdn.net/wm6752062/article/details/130314342
+
+
+
+创建卷组：
+
+```
+vgcreate [-s PE 大小] 卷组名 物理卷名
+
+[-s PE 大小] 选项的含义是指定 PE 的大小，单位可以是 MB、GB、TB 等。如果不写，则默认 PE 大小是 4MB。这里的卷组名指的就是要创建的卷组的名称，而物理卷名则指的是希望添加到此卷组的所有硬盘区分或者整个硬盘。
+```
+
+
+
+gcreate  test_strage /dev/sdb
+
+```
+激活卷组
+ vgchange -a y test_strage 
+ 查看卷组
+ vgscan
+ 
+ 创建逻辑卷LV
+ 
+ 语法：lvcreate  -L  容量大小  -n  逻辑卷名   卷组名
+ 
+ lvcreate  -L  20G  -n  lv_test_strage test_strage
+ lvcreate  -L  19.5G  -n  lv_test_strage test_strage
+ 
+ 创建文件系统并挂载
+ 1.创建文件系统
+语法： mkfs.ext4 /dev/卷组名/逻辑卷名
+		mkfs -t ext4 /dev/卷组名/逻辑卷名
+		
+		mkfs.ext4 /dev/test_strage/lv_test_strage
+
+2.创建挂载点
+语法：mkdir mnt/挂载名（挂载点路径自己决定）
+mkdir -p  /mnt/test_strage
+
+3.创建挂载点
+语法：mount  /dev/卷组名/逻辑卷名   /mnt/挂载点 
+
+mount  /dev/test_strage/lv_test_strage   /mnt/test_strage 
+
+
+
+扩容
+vgextend test_strage /dev/sdc
+
+lvextend  -L +20G /dev/test_strage/lv_test_strage
+
+
+resize2fs /dev/test_strage/lv_test_strage
+
+[root@eSight-101 /mnt/test_strage]# resize2fs /dev/test_strage/lv_test_strage 
+resize2fs 1.45.6 (20-Mar-2020)
+Filesystem at /dev/test_strage/lv_test_strage is mounted on /mnt/test_strage; on-line resizing required
+old_desc_blocks = 3, new_desc_blocks = 5
+The filesystem on /dev/test_strage/lv_test_strage is now 10354688 (4k) blocks long.
+10：修改fstab配置文件实现自动挂载
+/dev/VolGroup01/LogVol00                                /mysqldata  ext3 defaults 1 1
+
+缩容
+umount  /dev/test_strage/lv_test_strage  
+
+
+lvreduce -L -20G  /dev/test_strage/lv_test_strage 
+缩小容量之后进行移除物理盘
+vgreduce test_strage /dev/sdc 
+  Removed "/dev/sdc" from volume group "test_strage"
+  
+mount -t ext4  /dev/test_strage/lv_test_strage   /mnt/test_strage 
+
+
+e2fsck -fy /dev/test_strage/lv_test_strage
+```
+
+
+
