--- a/linux/磁盘相关笔记.md
+++ b/linux/磁盘相关笔记.md
@@ -261,7 +261,7 @@ mount  /dev/test_strage/lv_test_strage   /mnt/test_strage
 扩容
 vgextend test_strage /dev/sdc
 
-lvextend  -L +20G /dev/test_strage/lv_test_strage
+lvextend  -L +20G /dev/test_strage/lv_test_strage /dev/sdc
 
 
 resize2fs /dev/test_strage/lv_test_strage
@@ -275,16 +275,18 @@ The filesystem on /dev/test_strage/lv_test_strage is now 10354688 (4k) blocks lo
 /dev/VolGroup01/LogVol00                                /mysqldata  ext3 defaults 1 1
 
 缩容
+
+# 卸载挂载点，需要切换至根目录，必须和挂载点不在同一个目录
+umount /mnt/test_strage 
+
 umount  /dev/test_strage/lv_test_strage  
-
-
+ 
 lvreduce -L -20G  /dev/test_strage/lv_test_strage 
 缩小容量之后进行移除物理盘
 vgreduce test_strage /dev/sdc 
   Removed "/dev/sdc" from volume group "test_strage"
   
-mount -t ext4  /dev/test_strage/lv_test_strage   /mnt/test_strage 
-
+ 
 
 e2fsck -fy /dev/test_strage/lv_test_strage
 ```
