--- a/linux/磁盘相关笔记.md
+++ b/linux/磁盘相关笔记.md
@@ -221,11 +221,13 @@ https://blog.csdn.net/wm6752062/article/details/130314342
 vgcreate [-s PE 大小] 卷组名 物理卷名
 
 [-s PE 大小] 选项的含义是指定 PE 的大小，单位可以是 MB、GB、TB 等。如果不写，则默认 PE 大小是 4MB。这里的卷组名指的就是要创建的卷组的名称，而物理卷名则指的是希望添加到此卷组的所有硬盘区分或者整个硬盘。
+
+vgcreate  test_strage /dev/sdb
 ```
 
 
 
-gcreate  test_strage /dev/sdb
+
 
 ```
 激活卷组
