--- a/linux/磁盘相关笔记.md
+++ b/linux/磁盘相关笔记.md
@@ -255,17 +255,11 @@ mkdir -p  /mnt/test_strage
 
 3.创建挂载点
 语法：mount  /dev/卷组名/逻辑卷名   /mnt/挂载点 
-
 mount  /dev/test_strage/lv_test_strage   /mnt/test_strage 
-
-
-
 扩容
 vgextend test_strage /dev/sdc
 
 lvextend  -L +20G /dev/test_strage/lv_test_strage /dev/sdc
-
-
 resize2fs /dev/test_strage/lv_test_strage
 
 [root@eSight-101 /mnt/test_strage]# resize2fs /dev/test_strage/lv_test_strage 
@@ -277,18 +271,21 @@ The filesystem on /dev/test_strage/lv_test_strage is now 10354688 (4k) blocks lo
 /dev/VolGroup01/LogVol00                                /mysqldata  ext3 defaults 1 1
 
 缩容
-
-# 卸载挂载点，需要切换至根目录，必须和挂载点不在同一个目录
+1. 卸载挂载点，需要切换至根目录，必须和挂载点不在同一个目录
 umount /mnt/test_strage 
-
-umount  /dev/test_strage/lv_test_strage  
- 
+2. e2fsck filesystem
+e2fsck -f /dev/test_strage/lv_test_strage
+3. resize2fs filesystem ,18G为调整后的大小，不是减少大小
+ resize2fs /dev/test_strage/lv_test_strage 18g
+ 4. 减少逻辑卷的大小，注意一定要大于减少的存储的大小否则存储卸载不了
 lvreduce -L -20G  /dev/test_strage/lv_test_strage 
+5.重新挂载逻辑卷
+mount  /dev/test_strage/lv_test_strage   /mnt/test_strage 
+挂载成功之后查看数据看是否有丢失
 缩小容量之后进行移除物理盘
 vgreduce test_strage /dev/sdc 
   Removed "/dev/sdc" from volume group "test_strage"
   
- 
 
 e2fsck -fy /dev/test_strage/lv_test_strage
 ```
