--- a/笔记/视频.md
+++ b/笔记/视频.md
@@ -42,3 +42,26 @@ ftyp 作为视频的标识
 ffmpeg concat 拼接
 
 ffmpeg 视频录制
+Integrated Webcan  笔记本摄像头
+screen-capture-record  录制软件
+
+桌面录制 ffmpeg -f dshow -i video="screen-capture-record" v-out.mp4  
+录制摄像头  ffmpeg -f dshow -i video="Integrated Webcan" -y v-out2.flv  
+录制系统声  ffmpeg -f dshow -i audio="麦克风（Realtek Audio）"  a-out.cc
+
+
+录制麦克风声音和摄像头的视频：
+ffmpeg -f dshow -i video="USB2.0 PC CAMERA" -f dshow -i audio="麦克风 (USB2.0 MIC)" -vcodec libx264 -acodec aac -strict -2 out.mkv
+ 
+麦克风声音+屏幕录像+带水印
+ffmpeg -f dshow -i audio="麦克风 (Realtek High Definition Au" -rtbufsize 1000M -thread_queue_size 1024 -f gdigrab -i desktop -pix_fmt yuv420p -vf drawtext="fontcolor=red:fontsize=50:fontfile='msyh.ttf':text='888':x=50:y=50" -y out.mp4
+ 
+录制屏幕为直播流：
+ffmpeg -thread_queue_size 1000 -r 30 -f gdigrab -s 1600x900 -offset_x 100 -offset_y 200 -i desktop -vcodec libx264 -acodec copy -preset:v ultrafast -tune:v zerolatency -max_delay 10 -g 50 -sc_threshold 0 -f flv rtmp://xxxxxx
+
+ffplay rtmp://server/live/stream
+
+
+ffmpeg -i  http://ivi/cctv.m3u8 cctv.flv
+
+ffmpeg -i input.mp4 -filter:v "crop=iw*(5/10):ih*(5/10):iw:0" output.mp4
