--- a/linux/磁盘相关笔记.md
+++ b/linux/磁盘相关笔记.md
@@ -290,5 +290,27 @@ vgreduce test_strage /dev/sdc
 e2fsck -fy /dev/test_strage/lv_test_strage
 ```
 
+```
+分区
+parted  /dev/sdh
+mklabel
+gpt
+mkpart   rng  ext4 1MiB  100%
+q
+
+格式化
+mkfs.ext4  /dev/sdh1
+
+ 
+dumpe2fs /dev/sda1 #查看分区superblock 和blockgroup等详细信息
+ fsck /dev/sda #检查硬盘情况 -C 显示检查过程 -f 强制检查
+badblocks /dev/sda5 #检查硬盘坏道 -sv 显示进度和结果
+ 
+fuser -mv /mnt  #当显示设备正在忙的时候，可以使用这个命令查看使用进程
+tune2fs -l /dev/sda #查看磁盘参数（-h 查看可选选项，进行选项更改）
+df -Th 查看当前系统的分区情况
+fdisk -l 查看当前系统分区信息详情
+
+```
 
 
