--- a/linux/磁盘相关笔记.md
+++ b/linux/磁盘相关笔记.md
@@ -291,13 +291,22 @@ e2fsck -fy /dev/test_strage/lv_test_strage
 ```
 
 ```
-分区
+分区 分大于2T的磁盘  fdisk 分小于2T的磁盘
 parted  /dev/sdh
-mklabel
-gpt
+mklabel gpt
 mkpart   rng  ext4 1MiB  100%
+mkpart   rng  ext4 0 100%
 q
 
+5.1 设置DiskLable Type
+　　# parted /dev/sdb mklabel gpt
+5.2 创建分区并格式化
+　　# parted /dev/sdb mkpart primary xfs 0 100%
+　　# mkfs.xfs /dev/sdb1
+5.3 挂载分区
+　　# mount /dev/sdb1 /var/tmp
+5.4 删除分区
+　　# parted /dev/sdb rm 1
 格式化
 mkfs.ext4  /dev/sdh1
 
@@ -310,6 +319,26 @@ fuser -mv /mnt  #当显示设备正在忙的时候，可以使用这个命令查
 tune2fs -l /dev/sda #查看磁盘参数（-h 查看可选选项，进行选项更改）
 df -Th 查看当前系统的分区情况
 fdisk -l 查看当前系统分区信息详情
+
+
+### 挂载脚本
+#!/bin/bash
+# 新建/dev/sdb的磁盘标签类型为GPT
+parted /dev/sdb mklabel gpt 
+# 将/dev/sdb整个空间分给同一个分区
+parted /dev/sdb mkpart primary 0 100%
+# 忽略警告
+ignore
+# 格式化分区
+mkfs -t ext4 /dev/sdb1
+# 设定分区label(非必要)
+e2label /dev/sdb1 /gfsdata01
+# 创建挂载目录
+mkdir /gfsdata01
+# 临时挂载
+mount /dev/sdb1 /gfsdata01
+# 开机自动挂载(永久挂载)
+echo '/dev/sdb1 /gfsdata01       ext4    defaults        0 0'>>/etc/fsta
 
 ```
 
