--- a/linux/磁盘相关笔记.md
+++ b/linux/磁盘相关笔记.md
@@ -340,6 +340,18 @@ mount /dev/sdb1 /gfsdata01
 # 开机自动挂载(永久挂载)
 echo '/dev/sdb1 /gfsdata01       ext4    defaults        0 0'>>/etc/fsta
 
+
+
+
+https://www.cnblogs.com/vincenshen/p/12433469.html  
+
+
+使用blkid命令查看格式化情况
+
+查看磁盘是否有流量 
+使用iostat -dxc 1命令实时展示当前磁盘流量，至少观察2分钟以上。
+
+
 ```
 
 
