--- a/linux/磁盘相关笔记.md
+++ b/linux/磁盘相关笔记.md
@@ -341,6 +341,9 @@ mount /dev/sdb1 /gfsdata01
 echo '/dev/sdb1 /gfsdata01       ext4    defaults        0 0'>>/etc/fsta
 
 
+parted /dev/nvme0n1 mktable
+parted /dev/nvme0n1 mkpart primary 0% 100%
+parted /dev/nvme0n1 print
 
 
 https://www.cnblogs.com/vincenshen/p/12433469.html  
@@ -350,6 +353,11 @@ https://www.cnblogs.com/vincenshen/p/12433469.html
 
 查看磁盘是否有流量 
 使用iostat -dxc 1命令实时展示当前磁盘流量，至少观察2分钟以上。
+
+使用xxd命令以二进制文件查看磁盘文件，一般查看1000行就行了。我们只对/dev/sdc和/dev/sdd说明。
+
+命令：xxd /dev/设备名 | head -n 1000 | more
+
 
 
 ```
