--- a/linux/磁盘相关笔记.md
+++ b/linux/磁盘相关笔记.md
@@ -358,8 +358,9 @@ https://www.cnblogs.com/vincenshen/p/12433469.html
 
 命令：xxd /dev/设备名 | head -n 1000 | more
 
-
-
+vim  /etc/fstab
+/dev/sdb1      /xxx(你要挂载的文件名)  ext4   defaults   0  0
+ mount -a    刷新挂载
 ```
 
 
