--- a/架构设计/架构怎么做.md
+++ b/架构设计/架构怎么做.md
@@ -421,6 +421,8 @@ public abstract class AbstractSwagger2 {
 
 
 
+
+
 ## 6 如何做架构
 
 复杂度评估：
@@ -457,6 +459,17 @@ public abstract class AbstractSwagger2 {
 |      |      |      |      |
 |      |      |      |      |
 |      |      |      |      |
+
+
+
+正确架构的目标：
+
+- 功能完整
+- 无错误
+- 大流量
+- 强壮
+- 低成本
+- 快速开发
 
 
 
