--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -14,5 +14,40 @@ pocsuite
 
 
 
-sqlmap 渗透数据库
+#### sqlmap 渗透数据库
 
+
+
+批量 扫描存活地址
+
+fping -ag 192.169.99.0/24
+
+
+
+#### nmap 端口扫描，探询那些端口存活
+
+
+
+nmap -sn  192.168.99.0/24
+
+nmap -sn  192.168.199.0-254
+
+
+
+-sn 表示只进行ping 扫描，不进行端口
+
+全连接扫描会被记录，半连接扫描不会被记录
+
+使用nmap 半连接：
+
+nmap -sS  192.168.199.223 -p  80,81,3306
+
+-sS  表示使用SYN 进行半连接扫描
+
+#### nc( netcat) 进行端口扫描
+
+nc -z -v -n 192.168.78.128  1-100 
+
+- z 表示为zero，意思是扫描时不发送任何数据包
+- -v 即为详细输出
+- -n 不使用dns反向查询ip地址域名
