--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -44,6 +44,14 @@ nmap -sS  192.168.199.223 -p  80,81,3306
 
 -sS  表示使用SYN 进行半连接扫描
 
+
+
+扫描开放的端口和操作系统
+
+nmap -sS  -O 192.168.99.126
+
+-O 显示操作系统 每一种操作系统都有特定的指纹
+
 #### nc( netcat) 进行端口扫描
 
 nc -z -v -n 192.168.78.128  1-100 
@@ -51,3 +59,69 @@ nc -z -v -n 192.168.78.128  1-100
 - z 表示为zero，意思是扫描时不发送任何数据包
 - -v 即为详细输出
 - -n 不使用dns反向查询ip地址域名
+
+#### scapy 
+
+apt  install python3-pyx
+
+####  僵尸扫描
+
+rz1=sr1(IP(dst="192.168.1.54")/TCP(dport=445,falgs="SA"))
+
+rt=sr1(IP(dst="192.168.1.54",dst="192.168.1.163")/TCP(dport=22),timeout=1)  //第二张图
+rz2=sr1(IP(dst="192.168.1.54")/TCP(dport=445,falgs="SA"))   //第三张图
+rz1.display()   //查看IPID
+
+nmap 扫描僵尸主机
+
+nmap -p端口 僵尸主机IP地址 --script=ipidseq.nse
+
+
+
+|_ipidseq: Incremental!  说明是可以作为僵尸主机的
+
+
+
+伪造僵尸主机IP进行扫描
+
+nmap 目标主机IP -sI 僵尸主机IP -Pn -p 端口号
+
+#### wireshark  使用
+
+
+
+过滤器的使用
+
+port  80 捕获 80端口相关的
+
+
+
+ttl默认值
+
+/proc/sys/net/ipv4/ip_default_ttl
+
+
+
+
+
+#### zenmap
+
+
+
+#### nessus  漏洞检测
+
+https://www.tenable.com/downloads/nessus?loginAttempted=true
+
+启动
+
+/bin/systemctl start nessusd.service
+
+Nessus
+License Information
+Activation Code: MPMX-VGRB-9BRV-52NA-DXNE
+
+
+
+jingyu323
+
+msf6  扫描结果
