--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -125,3 +125,13 @@ Activation Code: MPMX-VGRB-9BRV-52NA-DXNE
 jingyu323
 
 msf6  扫描结果
+
+msfdb run  启动msf
+
+#### 设置后门
+
+windows 提权  getsystem
+- 0day
+- word 文档
+- apk
+-  宏
