--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -141,3 +141,9 @@ Vegil
 #### frp 内网穿透
 
 需要一个带公网IP的服务器
+
+portfwd 映射端口
+ 
+ 192.168.1.53 源  目标需要被映射的地址 192.168.1.119 
+
+ portfwd   add  -L  192.168.1.53  ‐ l   33389   ‐ r   192.168.1.119   ‐ p 3389
