--- a/安全/安全.md
+++ b/安全/安全.md
@@ -664,3 +664,12 @@ IPSEC  t提供了夸lan的zh专用和公用的wan，以及Internet的  安全通
   - 客体 是一个可以接受访问和受控的实体。可以是数据文件，一个程序或一个数据库
   - 接入权限
   
+
+  # 黑客操作系统
+
+  - kali
+  - backbox
+  - Parelet security os 隐秘的安全任务而构建
+  - CommandoVM   渗透测试 红队安全 基于windos 
+  - SamuraiWTF  管理web安全
+  - blackArch  界面简洁清晰
