--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -147,3 +147,8 @@ portfwd 映射端口
  192.168.1.53 源  目标需要被映射的地址 192.168.1.119 
 
  portfwd   add  -L  192.168.1.53  ‐ l   33389   ‐ r   192.168.1.119   ‐ p 3389
+
+ #### frp 搭建内网穿透访问外网代理
+
+ ####  蚁剑木马原理
+ 
