--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -12,15 +12,11 @@ goby Burp
 
 pocsuite
 
+## 扫描端口
 
 
-#### sqlmap 渗透数据库
 
 
-
-批量 扫描存活地址
-
-fping -ag 192.169.99.0/24
 
 
 
@@ -132,7 +128,6 @@ jingyu323
 
 msf6  扫描结果
 
-<<<<<<< HEAD
 - vulns 显示漏洞
 - use 
 - creds  显示数据库中的所有平局
@@ -180,7 +175,13 @@ mimikatz.exe 破解win密码
 
 mimikatz.exe "privilege::debug" "sekurlsa::logonPasswords" "exit"
 
+#### sqlmap 渗透数据库
 
+
+
+批量 扫描存活地址
+
+fping -ag 192.169.99.0/24
 
 ## 控制别人电脑工具
 
@@ -249,3 +250,11 @@ portfwd 映射端口
  192.168.1.53 源  目标需要被映射的地址 192.168.1.119 
 
  portfwd   add  -L  192.168.1.53  ‐ l   33389   ‐ r   192.168.1.119   ‐ p 3389
+
+
+
+
+
+## IP查询工具
+
+http://www.webkaka.com/
