--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -14,11 +14,15 @@ pocsuite
 
 ## 扫描端口
 
+1.
 
+c段web应用信息扫描工具(Cwebscanner)
 
+https://github.com/se55i0n/Cwebscanner/blob/master/Cwebscan.py
 
+pro max ultra版（https://github.com/lemonlove7/Cwebscanner_pro_max_ultra） 快速使用
 
-
+python Cwebscan.py 11.txt -p 80,443 -p 指定端口，不指定则会扫描常见web端口
 
 #### nmap 端口扫描，探询那些端口存活
 
@@ -52,7 +56,7 @@ nmap -sS  -O 192.168.99.126
 
 nmap --script=vuln  192.168.99.127
 
-
+C段 探测是： C网段的地址探测
 
 #### nc( netcat) 进行端口扫描
 
