--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -32,6 +32,12 @@ nmap -sn  192.168.99.0/24
 
 nmap -sn  192.168.199.0-254
 
+nmap -A -T4  192.168.199.0
+
+
+
+T4 代表快速扫描
+
 
 
 -sn 表示只进行ping 扫描，不进行端口
@@ -51,6 +57,8 @@ nmap -sS  192.168.199.223 -p  80,81,3306
 nmap -sS  -O 192.168.99.126
 
 -O 显示操作系统 每一种操作系统都有特定的指纹
+
+-V  版本检测
 
 扫描目标主机是否有漏洞
 
@@ -107,6 +115,16 @@ ttl默认值
 /proc/sys/net/ipv4/ip_default_ttl
 
 
+
+## 网络站信息收集
+
+
+
+网站指纹识别：
+
+- 网站类型
+- 数据库类型
+- 脚本类型
 
 
 
@@ -262,3 +280,7 @@ portfwd 映射端口
 ## IP查询工具
 
 http://www.webkaka.com/
+
+
+
+## 漏洞查询工具
