--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -123,10 +123,31 @@ ttl默认值
 网站指纹识别：
 
 - 网站类型
+
 - 数据库类型
+
 - 脚本类型
 
+- 网站目录扫描
 
+  - https://github.com/maurosoria/dirsearch  
+
+    python dirsearch.py -u http://192.168.99.126 -e php,txt,zip 
+
+  - dirmap 
+
+  dirmap 是一个高级 web [目录扫描](https://so.csdn.net/so/search?q=目录扫描&spm=1001.2101.3001.7020)工具，基于 python3 开发、运行，功能将会强于 DirBuster、Dirsearch、cansina、御剑。
+
+  git clone https://github.com/H4ckForJob/dirmap.git && cd dirmap && python3 -m pip install -r requirement.txt
+
+   
+
+  python3 dirmap.py -i http://192.168.99.126/DVWA-master/  -lcf   查看 网站目录
+
+-   waf  识别
+  - 防止常见的网络攻击： sql注入，xss夸站攻击csrf、网页后门攻击
+  - 防止各类自动化攻击，如：暴力破解、撞库、批量注册、自动发帖
+  - 其他，如：爬虫、0day攻击、代码分析、嗅探、数据篡改、越权访问、敏感信息泄漏、应用ddos、远程恶意包含、盗链、越权、扫描等
 
 #### zenmap
 
