--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -313,7 +313,6 @@ sc \\\ owa.god.org start test
 5. 漏洞利用
 6. 信息整理
 7. 形成报告
-=======
 msfdb run  启动msf
 
 #### 设置后门
@@ -338,7 +337,6 @@ portfwd 映射端口
 
  ####  蚁剑木马原理
  
-=======
 
 
 
@@ -350,3 +348,6 @@ http://www.webkaka.com/
 
 
 ## 漏洞查询工具
+
+## 暴力破解
+
