--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -383,4 +383,10 @@ http://www.webkaka.com/
 
 #### 彩虹表
 
+#### 注册表导出
+reg save HKLM\sam sam 
+reg save HKLM\system system
+
+#### LaZagane 获取windows 系统的密码
+
 ### 
