--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -389,4 +389,10 @@ reg save HKLM\system system
 
 #### LaZagane 获取windows 系统的密码
 
+cmd5.com  查看hash值
+
+#### 显示 rdp 连接用户
+
+powershell -exec  bypass -f ListAllUser.psl 
+
 ### 
