--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -354,6 +354,15 @@ portfwd 映射端口
  portfwd   add  -L  192.168.1.53  ‐ l   33389   ‐ r   192.168.1.119   ‐ p 3389
  #### frp 搭建内网穿透访问外网代理
 
+ #### ew  内网代理
+
+ 流量转发至对应绑定的端口
+
+ 1. 建立2层代理
+#### reGeorg   内网穿透
+
+
+
  ####  蚁剑木马原理
 
 
