--- a/linux/磁盘相关笔记.md
+++ b/linux/磁盘相关笔记.md
@@ -361,11 +361,60 @@ https://www.cnblogs.com/vincenshen/p/12433469.html
 vim  /etc/fstab
 /dev/sdb1      /xxx(你要挂载的文件名)  ext4   defaults   0  0
  mount -a    刷新挂载
+ 
+
+
 ```
 
 
 
 ## iscsi
 
+模拟网络存储：
 
+```
+fdisk -l						##查看可以进行划分的设备
+fdisk /dev/vdb					##在设备上面划分一个分区，划分一个500M的设备/dev/vdb1 准备将这个设备共享出去
+partprobe						##同步分区表
+targetcli 						##开始划分准备共享出去的设备
+
+```
+
+
+
+
+
+### centos  
+
+登录存储网络
+
+iscsiadm -m discovery --type sendtargets --portal 192.168.1.100
+
+
+
+Client挂载
+yum -y install iscsi-initiator-utils
+
+vim /etc/iscsi/initiatorname.iscsi		#这里与Server端的acl对应
+	InitiatorName=iqn.2014-11.com.example:client0
+
+iscsiadm --mode discoverydb --type sendtargets --portal 172.25.0.11 --discover		#发现可供挂载分区
+		172.25.0.11:3260,1 iqn.2014-11.com.example:server0
+iscsiadm --mode node --targetname iqn.2014-11.com.example:server0 --portal 172.25.0.11:3260 --login	#登陆挂载
+
+
+
+运行 iscsiadm -m node -l 登陆目标器。
+
+service open-iscsi status  查看iscsi服务状态
+service open-iscsi start  开启iscsi 服务
+service open-iscsi stop 停止iscsi服务
+Service open-iscsi restart 重启iscsi服务
+ 运行 cat /etc/iscsi/initiatorname.iscsi 查询启动器名称。
+
+
+
+iscsiadm -m discovery -t st -p 192.168.2.221
+iscsiadm -m discovery -t st -p 192.168.2.222
+iscsiadm -m node -l
 
