--- a/linux/磁盘相关笔记.md
+++ b/linux/磁盘相关笔记.md
@@ -8,8 +8,23 @@ du -sh [目录名]：返回该目录的大小
 du -sm [文件夹]：返回该文件夹总M数
 du -h [目录名]：查看指定文件夹下的所有文件大小（包含子文件夹）
 
-
 sar
+
+
+
+磁盘测速
+
+```
+测试磁盘的写速度：
+
+dd if=/dev/zero of=tempfile bs=1M count=1024 conv=fdatasync,notrunc status=progress
+测试磁盘的读速度
+dd if=tempfile of=/dev/null bs=1M count=1024 status=progress
+```
+
+
+
+
 
 
 
@@ -454,6 +469,21 @@ iscsiadm -m node -l
 
 sudo systemctl enable iscsid
 sudo systemctl enable iscsid-startup
+
+```
+# CentOS 
+rpm -qa | grep "multipath"           # 查看系统是否安装
+yum install device-mapper-multipath  
+systemctl enable multipathd || chkconfig multipathd on  # 启用多路径软件开机自启
+systemctl start multipathd || service multipathd status # 启动multipath多路径服务
+
+# ubuntu
+apt list | grep "multipath" # 查看系统是否安装
+# multipath-tools-boot/focal 0.8.3-1ubuntu2 all
+# multipath-tools/focal,now 0.8.3-1ubuntu2 amd64 [installed,automatic]
+apt-get install multipath-toolsss
+systemctl enable multipathd && systemctl start multipathd
+```
 
 
 
