--- a/图像识别/图像识别.md
+++ b/图像识别/图像识别.md
@@ -23,6 +23,16 @@ OpenCV用来做图像处理，定位到身份证号码的区域
 
 
 
+## 卷积
+
+### 高斯滤波： 去掉噪点，但是会模糊图片
+
+
+
+
+
+
+
 # 2.TesseractOCR
 
 适用范围：
@@ -44,7 +54,7 @@ pip install easyocr
 python 3.9.13    安装成功
 
 ## 色彩空间
- 
+
 ###  YUV 
 ###  HSB
 ###  HSL  
