--- a/图像识别/图像识别.md
+++ b/图像识别/图像识别.md
@@ -27,9 +27,13 @@ OpenCV用来做图像处理，定位到身份证号码的区域
 
 ### 高斯滤波： 去掉噪点，但是会模糊图片
 
+- **开运算：先腐蚀后膨胀，用于移除由图像噪声形成的斑点 **  
+- 闭运算：先膨胀后腐蚀，用来连接被误分为许多小块的对象  当需要把细节更明显的时候使用
+- 礼帽操作 = 原始输入-开运算（先腐蚀再膨胀）    礼帽操作是先对原图像进行膨胀操作，再用膨胀后的结果减去原图像得到。礼帽操作可以提取出比原图像暗且尺寸较小的细节或者噪声。**礼帽操作用于突出图像中的暗细节**
+-  黑帽运算=闭运算结果（先膨胀再腐蚀）-原始输入  可以删除亮背景下的黑暗区域，用原图减去闭运算结果就可以得到原图中灰度较暗的区域，突出显示图像中的小暗区域。
+- 梯度运算 = 膨胀 -腐蚀    用于求取轮廓    retval, dst = cv2.morphologyEx(src, op, kernel[, dst[, anchor]])   cv2.MORPH_GRADIENT：形态学梯度。	
 
-
-
+边缘检测：
 
 
 
