--- a/图像识别/图像识别.md
+++ b/图像识别/图像识别.md
@@ -33,7 +33,11 @@ OpenCV用来做图像处理，定位到身份证号码的区域
 -  黑帽运算=闭运算结果（先膨胀再腐蚀）-原始输入  可以删除亮背景下的黑暗区域，用原图减去闭运算结果就可以得到原图中灰度较暗的区域，突出显示图像中的小暗区域。
 - 梯度运算 = 膨胀 -腐蚀    用于求取轮廓    retval, dst = cv2.morphologyEx(src, op, kernel[, dst[, anchor]])   cv2.MORPH_GRADIENT：形态学梯度。	
 
-边缘检测：
+### 边缘检测：
+
+- Canny  检测器的效果较好，更适合用于检测真正的弱边缘。
+- Sobel算子很容易在空间上实现，边缘检测效果较好，且受噪声的影响也较小。邻域增大抗噪性会更好，但计算量也会增大，得出的边缘也会相应变粗。Sobel算子会检测出许多伪边缘，边缘定位精度不够高，在精度要求不高时是一种较常用的边缘检测方法。
+- 拉普拉斯边缘检测算子是一种二阶微分算子，与其它边缘检测方法的不同之处在于，该方法是一种各向同性的检测方法，即其边缘的增强程度与边缘的方向无关，从而可以满足不同走向的边缘锐化的要求。
 
 
 
