--- a/图像识别/图像识别.md
+++ b/图像识别/图像识别.md
@@ -27,11 +27,16 @@ OpenCV用来做图像处理，定位到身份证号码的区域
 
 ### 高斯滤波： 去掉噪点，但是会模糊图片
 
-- **开运算：先腐蚀后膨胀，用于移除由图像噪声形成的斑点 **  
-- 闭运算：先膨胀后腐蚀，用来连接被误分为许多小块的对象  当需要把细节更明显的时候使用
-- 礼帽操作 = 原始输入-开运算（先腐蚀再膨胀）    礼帽操作是先对原图像进行膨胀操作，再用膨胀后的结果减去原图像得到。礼帽操作可以提取出比原图像暗且尺寸较小的细节或者噪声。**礼帽操作用于突出图像中的暗细节**
+- **开运算：先腐蚀后膨胀，用于移除由图像噪声形成的斑点 ** 
+  -  开运算能够除去孤立的小点，毛刺和小桥，而总的位置和形状不便。
+  - 开运算是一个基于几何运算的滤波器。
+  - 结构元素大小的不同将导致滤波效果的不同。
+- 闭运算：先膨胀后腐蚀，用来连接被误分为许多小块的对象  当需要把细节更明显的时候使用 看上去将两个细微连接的图块封闭在一起,可以将边缘连接起来
+  - 闭运算能够填平小湖（即小孔），弥合小裂缝，而总的位置和形状不变。
+  - 闭运算是通过填充图像的凹角来滤波图像的
+- 礼帽操作 = 原始输入-开运算（先腐蚀再膨胀）    礼帽操作是先对原图像进行膨胀操作，再用膨胀后的结果减去原图像得到。礼帽操作可以提取出比原图像暗且尺寸较小的细节或者噪声。**礼帽操作用于突出图像中的亮细节**
 -  黑帽运算=闭运算结果（先膨胀再腐蚀）-原始输入  可以删除亮背景下的黑暗区域，用原图减去闭运算结果就可以得到原图中灰度较暗的区域，突出显示图像中的小暗区域。
-- 梯度运算 = 膨胀 -腐蚀    用于求取轮廓    retval, dst = cv2.morphologyEx(src, op, kernel[, dst[, anchor]])   cv2.MORPH_GRADIENT：形态学梯度。	
+- 梯度运算 = 膨胀 -腐蚀    用于求取轮廓    retval, dst = cv2.morphologyEx(src, op, kernel[, dst[, anchor]])   cv2.MORPH_GRADIENT：形态学梯度。膨胀图与腐蚀图之差   提取物体边缘
 
 ### 边缘检测：
 
@@ -39,7 +44,23 @@ OpenCV用来做图像处理，定位到身份证号码的区域
 - Sobel算子很容易在空间上实现，边缘检测效果较好，且受噪声的影响也较小。邻域增大抗噪性会更好，但计算量也会增大，得出的边缘也会相应变粗。Sobel算子会检测出许多伪边缘，边缘定位精度不够高，在精度要求不高时是一种较常用的边缘检测方法。
 - 拉普拉斯边缘检测算子是一种二阶微分算子，与其它边缘检测方法的不同之处在于，该方法是一种各向同性的检测方法，即其边缘的增强程度与边缘的方向无关，从而可以满足不同走向的边缘锐化的要求。
 
+### 角点检测：
 
+识别角点 
+
+```
+# 调用函数 cornerHarris，检测角点，其中参数 2 表示 Sobel 算子的孔径大小，23 表示 Sobel 算子的孔径大小，0.04 表示 Harris 角点检测方程中的 k 值
+dst = cv2.cornerHarris(gray, 2, 23, 0.05)
+```
+
+### 特征匹配
+
+
+
+傅里叶变换的作用：
+
+- 高频  变化剧烈的灰度分量
+- 低频 变化缓慢的灰度分量
 
 # 2.TesseractOCR
 
@@ -66,3 +87,13 @@ python 3.9.13    安装成功
 ###  YUV 
 ###  HSB
 ###  HSL  
+
+
+
+
+
+# 材料
+
+## OpenCV例程300篇
+
+https://youcans.blog.csdn.net/article/details/125112487
