傅里叶 变化

--- a/图像识别/图像识别.md
+++ b/图像识别/图像识别.md
@@ -59,8 +59,8 @@ dst = cv2.cornerHarris(gray, 2, 23, 0.05)
 
 傅里叶变换的作用：
 
-- 高频  变化剧烈的灰度分量
-- 低频 变化缓慢的灰度分量
+- 高频  变化剧烈的灰度分量   会使得图像细节更强
+- 低频 变化缓慢的灰度分量   会使得图像模糊
 
 # 2.TesseractOCR
 
