--- a/图像识别/图像识别.md
+++ b/图像识别/图像识别.md
@@ -21,6 +21,12 @@ OpenCV用来做图像处理，定位到身份证号码的区域
 
 安装：
 
+## 1. 图像的仿射变换
+
+#### 透视变换
+
+可以将图像从一个透视投影转换为另一个透视投影，实现图像的旋转、缩放、平移等操作
+
 
 
 ## 卷积
@@ -57,7 +63,20 @@ dst = cv2.cornerHarris(gray, 2, 23, 0.05)
 
 
 
-傅里叶变换的作用：
+
+
+## 图像金字塔
+
+- 高斯金字塔（Gaussian Pyramid）：高斯金字塔通过不断降采样（缩小）原始图像来构建，每一层图像都是前一层图像的一半大小。降采样可以通过平均像素值或使用高斯滤波器来实现。高斯金字塔在图像缩放、分割、模糊等任务中有用
+- 拉普拉斯金字塔（Laplacian Pyramid）：拉普拉斯金字塔是通过从高斯金字塔中的每一层图像减去其上一层的上采样图像得到的。这一过程使得每一层图像包含了高频成分，即图像细节。拉普拉斯金字塔在图像增强、压缩、图像融合等方面有用。
+
+虽然一幅图像在先后经过向下采样、向上采样后，会恢复为原始大小，但是向上采样和向下采样不是互逆的。也就是说，虽然在经历两次采样操作后，得到的结果图像与原始图像的大小一致，肉眼看起来也相似，但是二者的像素值并不是一致的
+
+
+
+
+
+#### 傅里叶变换的作用：
 
 - 高频  变化剧烈的灰度分量   会使得图像细节更强
 - 低频 变化缓慢的灰度分量   会使得图像模糊
