--- a/安全/渗透.md
+++ b/安全/渗透.md
@@ -341,6 +341,14 @@ msfdb run  启动msf
 
 #### 设置后门
 
+#### webshell 
+
+一个网络命令执行环境
+
+
+
+
+
 windows 提权  getsystem
 - 0day
 - word 文档
@@ -453,7 +461,14 @@ windows NT/ image File execution options  中对软件的debugger 做修改
 
 ### 溯源
 
-网站漏洞扫描工具 acunetix
+#### 网站漏洞扫描工具 acunetix
 
 
 
+#### 排查是否被登录
+
+1. ##### windows 
+
+   -  系统日志 
+     1. 在**“开始”**菜单上，依次指向**“所有程序”**、**“管理工具”**，然后单击**“事件查看器”**
+     2. 按 "**Window+R**"，输入 ”**eventvwr.msc**“ 也可以直接进入“**事件查看器**”
