--- a/图像识别/图像识别.md
+++ b/图像识别/图像识别.md
@@ -27,6 +27,39 @@ OpenCV用来做图像处理，定位到身份证号码的区域
 
 可以将图像从一个透视投影转换为另一个透视投影，实现图像的旋转、缩放、平移等操作
 
+#### 单应性矩阵
+
+```
+该函数可以根据输入的坐标获取透视变换后的坐标
+findHomography(srcPoints, dstPoints[, method[, ransacReprojThreshold[, mask[, maxIters[, confidence]]]]]) -> H, mask
+（ M = cv2.getPerspectiveTransform(src,dst) 该函数也可以获取透视变换矩阵）
+计算多个二维点对之间的最优单应性矩阵 H（3行x3列） ，使用最小均方误差或者RANSAC方法。函数功能：找到两个平面之间的转换矩阵。
+```
+
+```
+
+该函数可以根据输入的坐标获取透视变换后的坐标
+warpPerspective(src, H, dsize[, dst[, flags[, borderMode[, borderValue]]]]) -> dst
+
+（ dst = cv2.perspectiveTransform(pts,H) ）
+
+通过输入变换矩阵得到透视图片。
+
+参数说明：
+
+src 输入图片；dst 输出图片。
+M 输入的透视变换矩阵，大小是3*3
+dsize 输出图片的大小
+flags 插值方法（INTER_LINEAR或INTER_NEAREST）与可选标志WARP_INVERSE_MAP的组合，将M设置为逆变换（𝚍𝚜𝚝→𝚜𝚛𝚌）。
+borderMode 边界像素赋值操作(BORDER_CONSTANT or BORDER_REPLICATE)，前者是定值，后者是复制周围像素。
+```
+
+
+
+
+
+
+
 
 
 ## 卷积
@@ -60,6 +93,89 @@ dst = cv2.cornerHarris(gray, 2, 23, 0.05)
 ```
 
 ### 特征匹配
+
+1. Different of Gaussian(DoG) 对同一图像使用不同[高斯滤波](https://so.csdn.net/so/search?q=高斯滤波&spm=1001.2101.3001.7020)器
+
+   ```
+   sift = cv2.xfeatures2d.SIFT_create()#
+   keypoints, descriptor = sift.detectAndCompute(gray,None)#返回关键点和描述符
+    
+   img = cv2.drawKeypoints(image=img, outImg=img, keypoints=keypoints,
+                           flags=cv2.DRAW_MATCHES_FLAGS_DRAW_RICH_KEYPOINT,
+                           color=(51,163,236))# 
+   ```
+
+   
+
+2. **SURF**  加速的 使用比较少 效率提升有限  较少使用 flann 效果最好
+
+   ```
+   
+   surf = cv2.xfeatures2d.SURF_create(8000)#阈值越小特征点越多
+   keypoints, descriptor = surf.detectAndCompute(gray,None)#返回关键点和描述符
+   img = cv2.drawKeypoints(image=img, outImg=img, keypoints=keypoints,
+                           flags=4,
+                           color=(51,163,236))# 
+   ```
+
+   
+
+3. **ORB特征**  暴力检测
+
+   ```
+   
+   # create the ORB detector
+   orb = cv2.ORB_create()
+   kp1, des1 = orb.detectAndCompute(img1,None)
+   kp2, des2 = orb.detectAndCompute(img2,None)
+    
+   # brute force matching
+   bf = cv2.BFMatcher(cv2.NORM_HAMMING, crossCheck=True)#暴力匹配
+   matches = bf.match(des1,des2)#
+   #matches = bf.knnMatch(des1,des2,k=2)#knn匹配
+    
+   # Sort by distance.
+   matches = sorted(matches, key = lambda x:x.distance)
+   img3 = cv2.drawMatches(img1,kp1,img2,kp2, matches[:25], img2,flags=2)
+   #img3 = cv2.drawMatchesKnn(img1,kp1,img2,kp2, matches[:25], img2,flags=2)#knn 
+   ```
+
+4. FLANN特征匹配
+
+   ```
+   # create SIFT and detect/compute
+   sift = cv2.xfeatures2d.SIFT_create()
+   kp1, des1 = sift.detectAndCompute(queryImage,None)
+   kp2, des2 = sift.detectAndCompute(trainingImage,None)
+    
+   # FLANN matcher parameters
+   # FLANN_INDEX_KDTREE = 0
+   indexParams = dict(algorithm = 0, trees = 5)
+   searchParams = dict(checks=50)   # or pass empty dictionary
+    
+   flann = cv2.FlannBasedMatcher(indexParams,searchParams)
+    
+   matches = flann.knnMatch(des1,des2,k=2)
+    
+   # prepare an empty mask to draw good matches
+   matchesMask = [[0,0] for i in xrange(len(matches))]
+    
+   # David G. Lowe's ratio test, populate the mask
+   for i,(m,n) in enumerate(matches):#enumerate枚举列举 例 enumerate(['a',(2,3)]) 
+                                                           0 'a'
+                                                           1 (2,3)
+       if m.distance < 0.7*n.distance:#匹配过滤 丢弃距离大于0.7的值
+           matchesMask[i]=[1,0]
+    
+   drawParams = dict(matchColor = (0,255,0),
+                     singlePointColor = (255,0,0),
+                     matchesMask = matchesMask,
+                     flags = 0)
+    
+   resultImage = cv2.drawMatchesKnn(queryImage,kp1,trainingImage,kp2,matches,None,**drawParams)#收集参数 **变量存放的方式是字典 *元组
+   ```
+
+   
 
 
 
