--- a/图像识别/图像识别.md
+++ b/图像识别/图像识别.md
@@ -177,7 +177,32 @@ dst = cv2.cornerHarris(gray, 2, 23, 0.05)
 
    
 
+### 图像修复：
 
+常用图像修复技术：
+
+- 插值方法 
+
+  插值是一种常用的图像修复方法，根据周围已知的像素值，通过数学插值算法推断缺失的像素值。常见的插值方法包括最近邻插值、双线性插值和双三次插值等
+
+- 基于纹理合成的方法
+
+  该方法通过分析图像中的纹理特征，并将已有的纹理信息应用于缺失区域，从而进行修复。常用的纹理合成方法包括基于块匹配的纹理合成、基于图像统计特征的纹理合成等。
+
+- 基于边缘保持的方法：该方法通过保持图像边缘的连续性和一致性，来进行图像修复。常用的边缘保持方法包括基于Poisson方程的图像修复、基于结构张量的图像修复等。
+
+- 基于图像修复模型的方法：该方法通过建立图像的修复模型，利用已有的像素信息和先验知识来进行图像修复。常见的图像修复模型包括基于全变分（Total Variation）的图像修复模型、基于稀疏表示的图像修复模型等。
+
+- 基于深度学习的方法：近年来，深度学习在图像修复与恢复领域取得了显著的成果。通过使用卷积神经网络（CNN）等深度学习模型，可以学习和预测缺失区域的像素值，从而进行图像修复。常见的深度学习方法包括基于生成对抗网络（GAN）的图像修复、基于自编码器的图像修复等。
+
+- 基于结构化边缘的方法：该方法通过分析图像中的结构化边缘信息，将已有的边缘特征应用于缺失区域，以实现图像修复。常见的结构化边缘方法包括基于边缘保持平滑的图像修复、基于边缘连接的图像修复等。
+
+- 基于多帧图像的方法：当图像受到运动模糊或抖动等影响时，可以利用多帧图像的信息进行修复。通过对多个相关图像进行对齐和融合，可以恢复出更清晰和稳定的图像。常见的多帧图像修复方法包括基于图像对齐的图像修复、基于运动估计的图像修复等。
+
+- 基于超分辨率的方法：当图像分辨率较低或存在模糊时，可以通过超分辨率技术进行图像修复和恢复。通过建立图像的高频和低频成分模型，可以从低分辨率图像中恢复出更高分辨率的细节信息。常见的超分辨率方法包括基于插值的图像修复、基于深度学习的超分辨率图像修复等。
+  除了上述方法外，OpenCV还提供了一些特定的函数和工具，用于实现图像修复与恢复。例如，cv2.inpaint()函数可以根据给定的掩码信息，对图像进行修复；cv2.fillPoly()函数可以用于填充多边形区域等。
+  这些方法和技术提供了多种选择，可以根据具体的图像修复需求和情况选择合适的方法。在使用OpenCV进行图像修复时，可以结合这些方法和函数，灵活地应用于实际场景中，以达到更好的修复效果和质量。
+  总之，OpenCV的图像修复与恢复功能为我们提供了丰富的工具和算法，帮助我们处理受损或缺失的图像，使其恢复到更好的视觉效果和可视化质量。
 
 
 
@@ -230,3 +255,11 @@ python 3.9.13    安装成功
 #### OpenCV例程300篇
 
 https://youcans.blog.csdn.net/article/details/125112487
+
+有用的书
+
+https://cuijiahua.com/blog/2020/10/life-73.html
+
+算法学习路线
+
+https://cuijiahua.com/blog/2020/10/life-73.html
