--- a/操作系统/计算机网络.md
+++ b/操作系统/计算机网络.md
@@ -361,6 +361,24 @@ slient-interface  设置终端设备不回复hello包
 
 报文认证，只有认证过得报文才会通过
 
+
+
+
+
+display ip interface brief//查看接口IP地址信息
+display ip routing-table protocol ospf //查看OSPF路由条目
+
+##### SPF如何避免区域间的环路
+
+- area 0 有且只有一个，且连续
+- 非骨干区域必须和骨干区域直接相连
+- 区域间的水平分割，从该区域传递到其它区域的路由，不允许再次传回本区域
+
+##### OSPF路由引入
+
+- 引入的路由必须是路由表中存在的路由，即 active 活跃路由
+- 默认路由不会被引入，有其它生成默认路由的方法
+
 ### isis
 用在运营商端
 
@@ -703,6 +721,11 @@ IP地址子网掩码判断：
 
 
 ### 路由器
+- **直连网段**：是和本路由器在同一个网段下面。
+- **非直连网段**：是与本地路由器在不同的子网段下面，对于非直连网段，需要静态路由或动态路由将网段添加到路由表中。
+
+
+
 静态路由是：支持手动配置优先级，可通过配置目的地址/掩码相同，优先级不同、下一跳不同的静态路由实现转发路径的备份
 浮动路由：主路由的备份，保证链路故障时提供备份路由。主用路由下一跳可达时该备份路由不会出现在路由表中
 
