--- a/人工智能/大模型.md
+++ b/人工智能/大模型.md
@@ -5,4 +5,238 @@
 
 
 
+AIOps 训练营课程大纲
 
+### 模块一：云原生基础
+
+#### 第 1 周：云原生基础概述
+
+1. 从精益、敏捷到 DevOps
+
+1. SRE、AIOps 概述
+
+1. 大模型和 AIOps
+
+1. DevOps、SRE、AIOps 的关系
+
+1. Docker、Containerd、CRI-O、runc
+
+1. Dockerfile 最佳实践
+
+1. 本地集群配置
+
+1. 工作负载、网络、配置和存储
+
+1. 应用定义：YAML Manifest、Helm 和 Kustomize
+
+
+
+#### 第 2 周：IaC（基础设施即代码）
+
+\1. Terraform 架构和核心概念
+
+\2. Terraform Provider、Module
+
+\3. Terraform 入门实战（以腾讯云为例）
+
+\4. Terraform 多环境管理进阶实战
+
+\5. 实战：借助 Crossplane 自建 PaaS 平台
+
+
+
+### 模块二：AIOps 基础
+
+#### 第 3 周：AIOps 入门
+
+1. AIOps 和 LLMOps 概念和使用场景
+
+1. ChatGPT 和 AIOps
+
+1. AIOps Prompt engineering
+
+1. LLM AIOps RAG 增强检索入门
+
+1. LLM AIOps Fine-tuning 入门
+
+1. 实战一：ChatGPT API 接入实战
+
+1. 实战二：ChatGPT JSON Mode 实战
+
+
+
+### 模块三：Client-go 开发实战
+
+#### 第 4 周：Agent 入门
+
+1. 什么是 Agent
+
+1. 四种 AI Agent 设计模式
+
+1. Translation Agent 源码和架构分析
+
+1. LangChain 入门和实战
+
+1. 实战一：从零开发个人运维知识库 Agent
+
+1. 实战二：借助 Langfuse 实现 LLM 开发追踪
+
+
+
+#### 第 5 周：Client-go 入门
+
+1. Client-go 架构和使用场景
+
+1. 核心技术：Clientset、DynamicClient、RESTClient、DiscoveryClient
+
+1. 实战一：创建第一个 Client-go 工具（持续监听 Pod 状态）
+
+1. 实战二：实现一个简单的 Kubectl（创建工作负载）
+
+1. 进阶：Informers、Workqueue、Listers、Shared Informers
+
+
+
+#### 第 6 周：Client-go AIOps 实战
+
+1. ChatGPT API
+
+1. ChatGPT JSON Mode 入门
+
+1. Golang CLI 实战：Cobra SDK
+
+1. 实战一：从零开发 K8sGPT 命令行工具
+
+1. 接入 ChatGPT 自动生成 K8s Manifest
+
+1. 部署到集群
+
+1. 实战二：从零开发基于 LLM K8s 故障诊断工具
+
+1. 获取集群状态和事件
+
+1. 给出解决方案建议
+
+
+
+### 模块四：Kubernetes Operator 开发实战
+
+#### 第 7 周：Kubernetes Operator 入门
+
+1. Operator 架构和使用场景
+
+1. Controller vs Operator
+
+1. 开发工具：Operator SDK vs Kubebuilder
+
+1. 实战一：创建你的第一个 Operator
+
+1. Operator 核心技术：Reconcil Loop、Informer、Workqueue
+
+
+
+#### 第 8 周：Operator AIOps 实战
+
+1. 实战一：开发 Operator 调度 GPU 实例资源池
+
+1. 自动维持 GPU 资源池竞价实例数量
+
+1. 可用于机器学习、推理和大模型训练
+
+1. AI 基础设施 + Operator 实战
+
+1. 实战二：开发基于 LLM 的日志流监测 Operator
+
+1. 基于 Loki + LLM
+
+1. 日志实时监测，并结合 LLM 给出修复建议
+
+1. 实战三：开发基于内部知识库的 LLM RAG 增强检索 Operator
+
+1. 对内部知识库 Embedding 向量化
+
+1. 通过增强检索查询知识库的解决方案
+
+
+
+### 模块五：云原生 AIOps 综合实战
+
+#### 第 9 周：训练流量预测模型实现自动扩容
+
+\1. 流量预测模型训练
+
+a. 准备数据集
+
+b. 数据预处理
+
+c. Sklearn 模型训练
+
+d. 生成模型并提供推力服务
+
+\2. Operator 开发
+
+a. 使用模型进行流量预测
+
+b. 根据推理结果自动扩容工作负载
+
+
+
+#### 第 10 周：基于多 Agent 协同的 Kubernets 故障自动修复 
+
+\1. 行动决策 Agent
+
+\2. 自主修复 Agent
+
+a. OOM 修复
+
+b. 镜像异常修复
+
+\3. 通知人类介入 Agent
+
+a. 容器启动命令异常
+
+\4. Agent 进阶：决策链
+
+
+
+### 模块六：OpenTelemetry 可观测开发实战
+
+#### 第 11 周：OpenTelemetry 概述
+
+1. OpenTelemetry 可观测原理
+
+1. OpenTelemetry 两种集成方式
+
+1. OpenTelemetry 数据流
+
+
+
+#### 第 12 周：OpenTelemetry 开发实战
+
+1. 实战一：集成 OTel SDK
+
+1. 实战二：0 代码集成 OpenTelemetry
+
+1. 实战三：打造日志、指标和分布式追踪三合一查询面板
+
+
+
+### 模块七： eBPF 可观测开发实战
+
+#### 第 13 周：eBPF 概述
+
+1. eBPF 工作原理
+
+1. kprobes 和uprobes 探针
+
+1. eBPF 与可观测性
+
+
+
+#### 第 14 周：eBPF 零侵入可观测性开发实战
+
+1. 实战一：借助 BCC 开发第一个 eBPF 程序
+
+1. 实战二：通过 eBPF、Beyla 实现零侵入 Metrics 和 Tracing（Golang 为例）
+
+1. 实战三：通过 eBPF、Cilium、Hubble 实现零侵入可观测
