--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -193,11 +193,15 @@ RARP 反向地址解析协议
 
 微服务是去中心化，面向服务的是集中化架构
 
-#### 26 构建 
+### 26 构建 
 
 构建的定义：软件构建是一种组装单元，它具有规范的接口规约和现实的语境依赖。软件构建可以被独立的部署并由第三方任意组装。
 
 构建是一个独立发布的功能部分，可以通过其接口访问它的服务。
+
+
+
+接口是一组已命名的一组操作的集合
 
 
 
@@ -218,6 +222,14 @@ RARP 反向地址解析协议
 - 独立部署单元
 - 作为第三方的组装单元
 - 没有外部的可见状态
+
+### 27 服务器
+
+应用服务器： EJB模型 和COM+ 
+
+web 服务器的 severlet  ASP.net   
+
+net框架还引入了一种新的同时适用于客户端和服务端基于cli的构建模型
 
 
 
