--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -445,4 +445,22 @@ absd
 
 - 密码学
 
+  是一种特殊的加密和解密技术，区块链中应用了多种加密技术，包括哈希算法、公钥私钥、数字签名、由此来保证整个数据安全。并且证明了数据归属。
+
 ### 7.数据湖 数据仓库一体架构及其应用
+
+- 统一的数据管理
+
+  仓湖一体是提供完善的数据管理能力。数据湖中存在两类数据：原始数据和处理后的数据。数据湖中数据会不断积累、演化，因此包含以下数据管理能力：数据源、数据连接、数据格式、数据schema。同时数据湖是单个企业统一存放数据的场所因此具有一定的数据管理能力
+
+- 多模态的存储引擎
+
+  仓湖一体本身内置多模态的存储引擎，以满足不同的应用对于数据访问的需求。但是实际的使用过程中，为了达到可接受的性价比，仓湖一体解决方案可提供可插拔的存储框架，支持的类型有hdfs/s3等，并且在必要的时候还可以与外置的存储引擎协同工作，满足多样化的应用需求。
+
+- 丰富的计算引擎
+
+  提供从批处理、流式计算、交互分析到机器学习等各类计算引擎。一般情况下数据加载、转换处理会使用批处理计算引擎；需要实时计算的部分会使用流式计算引擎；对于一些探索式的分析场景，可能又需要引入交互式分析引擎。因此仓湖一体解决方案提供计算引擎的可扩展、可插拔
+
+- 数据全生命周期的管理
+
+  仓湖一体的提供一个企业的全量数据存储场所，需要对数据的全生命周期进行管理，包括数据的定义、接入、存储、处理、分析、应用的全过程。与i个强大的数据湖实现，需要能做到对其的任意一条数据的接入存储、处理、消费过程式可追溯的，能够清楚的重现数据完整的产生过程和流动过程
