--- a/架构设计/架构怎么做.md
+++ b/架构设计/架构怎么做.md
@@ -440,7 +440,7 @@ public abstract class AbstractSwagger2 {
 |              |            |                              |              |
 |              |            |                              |              |
 
-##### 如何评估系统高可用？
+##### 6.1 如何评估系统高可用？
 
 高可用性能评估  ：
 
@@ -448,7 +448,7 @@ public abstract class AbstractSwagger2 {
 
 
 
-##### 如何监控系统高可用？
+##### 6.2 如何监控系统高可用？
 
 创建一套监控系统，包括基础服务监控、系统应用监控报警、存储服务监控报警。
 
@@ -473,5 +473,17 @@ public abstract class AbstractSwagger2 {
 
 
 
-##### 如何保证系统高可用？
+##### 6.3 如何保证系统高可用？
+
+
+
+##### 6.4 基于体系结构的软件设计
+
+###### **ABSD方法的3个基础**
+
+- 功能分解  ： 使用已有模块的内聚和耦合技术
+- 选择架构风格： 实现质量和业务需求
+- 软件模块的使用： 复用软件系统的结构
+
+###### 视图与视角
 
