--- a/算法/算法.md
+++ b/算法/算法.md
@@ -6,9 +6,20 @@ https://github.com/CyC2018/CS-Notes/blob/master/notes/Leetcode%20%E9%A2%98%E8%A7
 
 
 
-# Java 数据结构
-
-https://blog.csdn.net/qq_38410730/category_7486623.html
+ 
 
 
-实现一个
+
+# 双指针 
+
+1. 数字 平方求合题中 ，C++ 有一个 int 数组越界   相加越界， 需要用总数建一个数 来消减越界，还有就是 % 1000000007 消除越界问题
+2. 
+
+
+
+
+
+
+
+# 动态规划
+
