--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -229,7 +229,30 @@ CMMI模型的5个成熟度级别分别为：
 
 - 平台独立模型
 
-  
+
+
+
+### 软件架构风格
+
+#### 1.层次架构风格 
+
+划分层次越多，系统完成某项功能需要的中间间调用操作越多，其性能越差。
+
+#### 2.管道架构风格
+
+通过引入过滤器的数据并发处理可以有效提高系统性能。
+
+#### 3.面向对象
+
+可以通过减少功能调用层次提高系统性能
+
+#### 4.过程调用
+
+显式调用策略替换为隐式调用策略能够提高系统的灵活性，但会降低系统的性能。
+
+
+
+
 
 #### 架构视图：
 
