--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -252,6 +252,14 @@ CMMI模型的5个成熟度级别分别为：
 
 
 
+### 架构描述语言 ADL
+
+是一种为说明软件系统和概念架构和对这些概念架构的建模提供的语言。包括以下组成部件：组件、组件接口、连接件和架构配置。ADL对连接件的重视是区分ADL与其他建模语言的重要特征之一。
+
+
+
+
+
 
 
 #### 架构视图：
@@ -293,6 +301,46 @@ CMMI模型的5个成熟度级别分别为：
 ​	领域驱动是：设计提出围绕领域模型进行软件设计和开发，该模型是由开发人员与领域专家协作建出的一个反映深层次领域知识的模型。
 
 实施DSSA的过程中包含了一些基本的活动。其中领域模型是领域分析阶段的主要目标
+
+领域分析   目的是获取领域模型
+
+领域设计 目的是获取特定领域的软件架构
+
+领域实现  目的是 开发和组织可重用信息，对基础软件架构进行实现
+
+
+
+#### 2.特定领域
+
+领域定义有两种办法：
+
+1.垂直领域： 定义一个特定的系统族，导出在该领域中可作为系统的可行解决方案的一个通用软件架构
+
+2.水平域： 定义了一个或者多个系统族中功能区域的共有部分，在子系统级上涵盖多个系统族的特定部分功能。
+
+### 基于软件架构 ABSD 
+
+q强调由商业、质量和功能需求的组合驱动软件架构设计。它强调采用视角和视图来描述软件架构，采用用例和质量场景来描述质量需求。
+
+
+
+### 架构评估
+
+- 性能 指系统的响应能力，即经过多长时间才能对某个事件做出响应，或者某个时间段内系统所能处理的事件个数。
+
+  采用架构策略：增加计算资源、减少计算开销、引入并发机制、采用资源调度
+
+- 可用性：系统能够正常运行的时间比例。经常用两次故障之间的时间长度再出现是系统能够正常恢复的速度来表示。
+
+  采用策略：采用心跳、ping、echo、主动冗余、被动冗余、选举架构策略实现
+
+- 安全性：是指系统再像合法用户提供服务的同同时能够阻止非授权用户使用的企图和拒绝服务的能力。
+
+  采用策略：通常采用入侵检测、用户认证、用户授权、追踪审计
+
+- 可靠性：产品再规定的条件和规定的实际内完成规定功能的能力。
+
+
 
 
 
