--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -253,6 +253,20 @@ CMMI模型的5个成熟度级别分别为：
 
 ###  20 建模
 
+#### 结构化建模方法：
+
+是以过程为中心的技术，可用于分析现有系统以及定义新系统的业务需求。结构化建模方法所绘制的模型成为数据流图（DFD），对于流程较稳定的系统可以考虑结构化建模方法。
+
+
+
+#### 信息工程建模方法：
+
+
+
+#### 面向对象建模方法：
+
+
+
 
 
 ### 21 需求 
