--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -377,6 +377,10 @@ CMMI模型的5个成熟度级别分别为：
 
 
 
+### 23 设计模式
+
+
+
 
 ### 软件架构风格
 
@@ -694,7 +698,7 @@ SQL注入的主要防范措施：
 - 分级管理： 对用户进行分级管理
 - 参数校验：编写sql时禁止直接传入sql，必须通过设置参数传递变量值
 - 参数过滤：对参数值与过滤敏感类容。
-- 安全参数：使用编程语言中提供的数据库操作安全参数的强制执行检查
+- 安全参数：<u>使用编程语言中提供的数据库操作安全参数的强制执行检查</u>
 
 
 
