--- a/架构设计/软件架构师.md
+++ b/架构设计/软件架构师.md
@@ -62,6 +62,28 @@
 	- 具体包括：各种要求列表、相互参考、由描述内容检索名称、一致性检验和完整性检验。
 	- 
 
+数据流图：作为一种图形化工具，用来说明业务处理过程，系统边界内所包含的功能和系统中的数据流。
+
+流程图：以图形化的方式展示应用程序从数据输入开始到获得输出为止的逻辑过程，描述处理过程的控制流。
+
+区别：
+
+1. 数据流程图中的处理过程可以 并行；流程图在某个时间点只能处理一个过程。
+
+2. 数据流图展现系统的数据流；流程图展系统的控制流
+
+3. 数据流图展示的是全局的处理过程，过程直接遵循不同的计时标准；流程图中处理过程遵循一致的计时标准。
+
+4. 数据流图适用于系统分析中的逻辑建模阶段；流程图适用于系统设计中的物理建模阶段。
+
+   项目组为了更好地对情报数据处理流程及其与外部角色关联行为进行建模，符合数据流图的应用场景要求，因此，首先构件数据流图以反应数据流向和系统边界。
+
+高质量数据流图：
+
+1. 复杂性最小化原则。 DFD分层结构就是把信息划分为小的且相对独立的一大批子集例子，这样就可以单独考察每一个DFD
+2. 接口最小化原则 。 是复杂性最小化的一种具体规则，在设计模型时，应使得模型中各个元素之间的接口数或者连接数最小化
+3. 数据流一致性原则。 一个过程和它的过程分解在数据流内容中是否有差别 是否存在有数据流流出
+
 
 
 
